--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Formulário de cadastro</h2>
             <div class="list-form">
                 <label for="nome">Nome</label>
-                <input type="text" id="nome" name="nome">
+                <input type="text" id="nome" name="nome" minlength="3">
             </div>
             <div class="list-form">
                 <label for="email">E-mail</label>
@@ -30,15 +30,15 @@
             </div>
             <div class="list-form">
                 <label for="telefone">Telefone</label>
-                <input type="tel" id="telefone" name="telefone">
+                <input type="tel" id="telefone" name="telefone" minlength="10">
             </div>
             <div class="list-form">
                 <label for="cpf">CPF</label>
-                <input type="text" id="cpf" name="cpf">
+                <input type="text" id="cpf" name="cpf" minlength="11">
             </div>
             <div class="list-form">
                 <label for="cep">CEP</label>
-                <input type="text" id="cep" name="cep">
+                <input type="text" id="cep" name="cep" minlength="8">
             </div>
             <button type="submit">Enviar</button>
         </form>
